feat(notifications): add user notifications
