# backend/internal/notification/dto.go
@@ -1,0 +1,5 @@
+package notification
+
+type MarkAllReadResponse struct {
+	Updated int64 `json:"updated"`
+}
